--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     z-index: 10;
 }
 
-@media screen and (max-width: 1020px){
+@media screen and (max-width: 1019px){
     body {
         width: 100%;
     }
@@ -101,7 +101,7 @@ a {
     top: 89px;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 767px){
     header {
         display: none;
     }
@@ -341,7 +341,7 @@ a {
     margin-top: 20px;
 }
 
-@media screen and (max-width: 1020px){
+@media screen and (max-width: 1019px){
     #slider {
         height: 446px;
         margin-top: 89px;
@@ -515,7 +515,7 @@ a {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #slider {
         height: 221px;
         margin-top: 71px;
@@ -747,7 +747,7 @@ h3 {
     background-color: white;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1019px) {
     #our_services {
         height: 670px;
         padding-top: 50px;
@@ -768,7 +768,7 @@ h3 {
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #our_services {
         height: 100%;
         padding-top: 32px;
@@ -888,7 +888,7 @@ h3 {
     background-color: #323746;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1019px) {
     #portfolio {
         width: 100%;
         height: 100%;
@@ -920,7 +920,7 @@ h3 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #portfolio {
         width: 100%;
         height: 100%;
@@ -1036,7 +1036,7 @@ h3 {
     background-color: #ffffff;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1019px) {
     #aboutus {
         height: 100%;
         padding-bottom: 80px;
@@ -1060,7 +1060,7 @@ h3 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #aboutus {
         height: 100%;
         padding-bottom: 110px;
@@ -1226,7 +1226,7 @@ li div{
     background-color: #ea676b;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1019px) {
     #get-a-quote {
         height: 100%;
         padding-right: 40px;
@@ -1252,7 +1252,7 @@ li div{
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #get-a-quote {
         height: 100%;
         padding-right: 30px;
@@ -1323,7 +1323,7 @@ footer {
     transform: scale(1.2);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 
     footer {
         height: 76px;
@@ -1383,3 +1383,42 @@ footer {
     top: 180px;
 }
 
+.ham-menu {
+    display: none;
+}
+
+@media screen and (max-width: 767px){
+
+    html {
+        scroll-padding-top: 60px;
+    }
+
+    .ham-menu {
+        display: none;
+        width: 278px;
+        height: 100%;
+        background-color: #2d303a;
+        position: fixed;
+        z-index: 16;
+    }
+
+    .ham-menu .singolo {
+        display: inline-block;
+        margin-left: 30%;
+        margin-top: 5px;
+        position: absolute;
+    }
+
+    .bar-wrapper {
+        margin-left: 71px;
+        margin-top: 100%;
+    }
+
+    .bar {
+        display: block;
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 28px;
+    }
+
+}
